1999-08-07  Alex Lancaster  <alex@santafe.edu>

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	-buildObjects]): Use EZGraph convenience factory creation method.

1999-08-01  Alex Lancaster  <alex@santafe.edu>

	* MousetrapModelSwarm.m ([MousetrapModelSwarm -buildObjects]): Use
	convenience factory method to create Grid2d instance.

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	-buildObjects]): Remove explicit Zone creation, no longer
	required.  Use convenience factory method to create
	Object2dDisplay instance.

1999-07-28  Alex Lancaster  <alex@santafe.edu>

	* MousetrapModelSwarm.m ([MousetrapModelSwarm +createBegin:]): Use
	convenience CustomProbeMap creation using identifier lists, rather
	than the verbose manual creation method.

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	+createBegin:]): Likewise.

	* MousetrapObserverSwarm.m ([MousetrapObserverSwarm
	-buildActions]): Use +create:setRepeatInterval: convenience method
	to setup Schedule.

	* MousetrapModelSwarm.m ([MousetrapModelSwarm -buildActions]):
	Likewise use +create:setAutoDrop: convenience method for creation
	of dynamic schedule instance.

1999-06-28  Alex Lancaster  <alex@santafe.edu>

	* main.m (main): Create instance of `LispArchiver', `Archiver' now
	only an abstract protocol.

	* MousetrapBatchSwarm.m ([MousetrapBatchSwarm -buildObjects]):
	Likewise.

1999-06-09  Alex Lancaster  <alex@santafe.edu>

	* main.m (main): Drop the archiver instance after object
	instantiation.

	* MousetrapBatchSwarm.m ([MousetrapBatchSwarm -buildObjects]):
	Likewise.  Create Archiver instance in current Zone rather than
	globalZone.
	
1999-06-08  Alex Lancaster  <alex@santafe.edu>

	* main.m (main): Use Archiver convenience method
	-create:fromLispPath: to create instance.  Use
	-getWithZone:object: to create the `batchSwarm' object in the
	correct Zone.

	* MousetrapBatchSwarm.m ([MousetrapBatchSwarm -buildObjects]):
	Likewise for `modelSwarm'.
